# dark-lang

./: CMakeLists.txt  README  vcpkg.json
cmake/: GMP.cmake  LLVM.cmake  SimdUTF.cmake
include/adt/: buffer.hpp  range.hpp
include/base/: index_base.hpp  value_store.hpp  yaml.hpp
include/common/: assert.hpp  big_num.hpp  bit_array.hpp  cow.hpp  enum.hpp  format.hpp  macro.hpp  ostream.hpp  small_string.hpp  span.hpp  static_string.hpp  string_utils.hpp  utf8.hpp
include/diagnostics/: basic_diagnostic.hpp  diagnostic_consumer.hpp  diagnostic_emitter.hpp  diagnostic_kind.def  diagnostic_kind.hpp  diagnostic_kind.pdef  dianostic_converter.hpp  sorting_diagnostic_consumer.hpp
include/lexer/: character_set.hpp  numeric_literal.hpp  string_literal.hpp  token_buffer.hpp  token_kind.def  token_kind.hpp  token_kind.pdef
include/source/: source_buffer.hpp
src/: CMakeLists.txt  driver.cpp
src/common/: CMakeLists.txt
src/diagnostics/: CMakeLists.txt  diagnostic_consumer.cpp  diagnostic_kind.cpp
src/lexer/: CMakeLists.txt  numeric_literal.cpp  string_literal.cpp  token_buffer.cpp  token_kind.cpp
src/source/: CMakeLists.txt  source_buffer.cpp  test.cpp
std/: std.dark
test/: CMakeLists.txt
test/runtime/: CMakeLists.txt
test/runtime/adt/: CMakeLists.txt  range.cpp
test/runtime/common/: CMakeLists.txt  big_num.cpp  bit_array.cpp
test/runtime/diagnostics/: CMakeLists.txt  diagnostic_emitter_test.cpp  diagnostic_test.cpp  mock.hpp  sorting_diagnostic_test.cpp
test/runtime/lexer/: CMakeLists.txt  mock.hpp  string_literal_test.cpp
tools/: gen.py  template_generator.py
tools/generator/: diagnostic_kind.py  token_kind.py
